=== Opus Primus changelog.txt ===
Last revised March 22, 2013
Please note, the Opus Primus copyright can be found at the end of this file.

== Version 1.2 ==
* Released ...

= Code =
* General minor code refactorings and improvements
* Moved `comments only tab`, `pingbacks only tab` and `trackbacks only tab` functionality into Comments class methods
* Moved `comments only panel`, `pingbacks only panel` and `trackbacks only panel` functionality into Comments class methods

= CSS =
* Add rounded corners for the comment type tabs and the comments panel
* Add `#d3d3d3` color as default tab background color; active is transparent
* Removed unused element for non-existent 'comments-toggle' script

= Miscellaneous =
* Code clean-up

/** ------------------------------------------------------------------------- */
== Version 1.1 ==
* Released March 2013

= Code =
* Added `excerpt_more_link` and attached to `excerpt_more` filter
* Added `anchor_title_text` for use with `excerpt_more_link` and permalink in the post meta details
* Added additional list wrapper around each comment type
* Added Breadcrumbs trails to pages and posts
* Added Comment Tabs for each type (Comment, Pingback, and Trackback)
* Created and enqueued 'opus-primus-comment-tabs.js'
* Created Header class
* Drop `restore_image_title` filter hook into `media_send_to_editor` as potentially blocking insertion of media
* Fixed comments (only) count output
* Limit width generated by "Full Size Video" JavaScript to a maximum of 1000px
* Refactored Structures class to put `site_title`, `site_description`, and `custom_header_image` into Header class
* Refactored `opus-primus-header` to reflect class/method changes of Structures and Header

= CSS =
* Added classes to `h2`, `ul`, and `li` elements in `OpusPrimusAuthors::author_details`
* Add minor comments styles
* Center content of Post Format: Video posts.

= Miscellaneous =
* Removed unused style sheet 'opus-primus-responsive-layout.css'
